2A/05_Projet_GL/src/test/deca/syntax/valid/HelloWorld/19_printlnx_pls.deca
// Description:
//    Programme printlnx plusieurs elements
// Resultats:
//     Bonjour hello every 
//      body
// Historique:
//    cree le 20/12/2023


{
    printlnx("Bonjour ", "hello ", "every ");
    printlnx("body");
}