2A/05_Projet_GL/src/test/deca/syntax/invalid/SansObjet/06_PrintSansOparent.deca
// Description:
//    tests de programme print sans "(" même test pour println, printx, printlnx
//
// Resultats:
//    ligne 10  : Erreur,  missing '(' at '"hello"'
//
// Historique:
//    cree le 09/01/2024
{
    print"hello");
}